--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "nodemon": "^1.18.10"
   },
   "devDependencies": {
