--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.10",
+    "swagger-ui-express": "^4.0.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
@@ -42,7 +43,7 @@
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
-    "mocha": "^6.0.2",
+    "mocha": "^6.1.3",
     "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^13.3.0"
   }
