--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "nyc --reporter=html --reporter=text mocha --require babel-polyfill --require @babel/register --timeout 5000 server/tests/*.js --exit",
     "start": "nodemon --exec babel-node server/app.js",
-    "coverage": "nyc report --reporter=text-lcov | coveralls"
+    "startdb":"nodemon --exec babel-node database/app.database.js",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "createTables": "node --require @babel/register database/models/tables.js",
+    "droptables": "node --require @babel/register database/models/droptables.js"
   },
   "repository": {
     "type": "git",
@@ -34,6 +37,7 @@
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "nodemon": "^1.18.10",
+    "pg": "^7.10.0",
     "swagger-ui-express": "^4.0.2"
   },
   "devDependencies": {
@@ -43,8 +47,9 @@
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
-    "mocha": "^6.1.3",
+    "make-runnable": "^1.3.6",
+    "mocha": "^6.1.4",
     "mocha-lcov-reporter": "^1.3.0",
-    "nyc": "^13.3.0"
+    "nyc": "^14.0.0"
   }
 }
