[feature #165480838] this commit validate whether the person signing up is can not make himself an admin

--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "test": "nyc --reporter=html --reporter=text mocha --require babel-polyfill --require @babel/register --timeout 5000 server/tests/*.js --exit",
     "start": "nodemon --exec babel-node server/app.js",
-    "startdb":"nodemon --exec babel-node database/app.database.js",
+    "startdb": "nodemon --exec babel-node database/app.database.js",
+    "createadmin": "node --require @babel/register database/controllers/admin.js",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "createTables": "node --require @babel/register database/models/tables.js",
-    "droptables": "node --require @babel/register database/models/droptables.js"
+    "createTables": "node --require @babel/register database/models/tables.js && npm run createadmin",
+    "droptables": "node --require @babel/register database/models/droptables.js",
+    "database": "concurrently \"npm run droptables\" \"npm run createTables\" \"npm run createadmin\""
   },
   "repository": {
     "type": "git",
@@ -30,6 +32,7 @@
     "babel-polyfill": "^6.26.0",
     "bcrypt": "^3.0.5",
     "body-parser": "^1.18.3",
+    "concurrently": "^4.1.0",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "joi": "^14.3.1",
