--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "app.js",
   "scripts": {
     "test": "nyc --reporter=html --reporter=text mocha --require babel-polyfill --require @babel/register --timeout 5000 server/tests/*.js --exit",
-    "testdb": "nyc --reporter=html --reporter=text mocha --require babel-polyfill --require @babel/register --timeout 5000 database/tests/*.js --exit",
+    "testdb": "DEV_ENV=test npm run test:dev && DEV_ENV=test nyc --reporter=html --reporter=text mocha --require babel-polyfill --require @babel/register --timeout 5000 database/tests/*.js --exit",
     "start": "nodemon --exec babel-node server/app.js",
     "startdb": "nodemon --exec babel-node database/app.database.js",
+    "start:prod": "babel-node database/app.database.js && npm run createTables && npm run createadmin",
     "createadmin": "node --require @babel/register database/controllers/admin.js",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "createTables": "node --require @babel/register database/models/tables.js  && npm run createadmin",
+    "test:dev":"npm run droptables && npm run createTables && npm run createadmin",
+    "createTables": "node --require @babel/register database/models/tables.js",
     "droptables": "node --require @babel/register database/models/droptables.js"
   },
   "repository": {
