--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
         "import/prefer-default-export": 0,
         "import/no-useless-path-segments": 0,
         "no-shadow": 0,
-        "no-undef": 0
+        "no-undef": 0,
+        " no-self-compare": 0
     }
 }
