--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm run droptables && npm run createTables && npm run nodemon",
     "test": "DEV_ENV=test nyc --reporter=html --reporter=text mocha --require babel-polyfill --require @babel/register --timeout 5000 server/tests/*.js --exit",
-    "nodemon": "DEV_ENV=development nodemon --exec babel-node server/app.database.js",
+    "nodemon": "npm run compile && DEV_ENV=development nodemon --exec babel-node server/app.database.js",
     "droptables": "DEV_ENV=development node --require @babel/register server/models/droptables.js",
     "createTables": "DEV_ENV=development node --require @babel/register server/models/tables.js && npm run createadmin",
     "startTests": "DEV_ENV=test nodemon --exec babel-node server/app.database.js",
@@ -17,7 +17,8 @@
     "createTablesTests": "DEV_ENV=test node --require @babel/register server/models/tables.js && npm run createadminTests",
     "startv1": "nodemon --exec babel-node dummy/app.js",
     "testV1": "nyc --reporter=html --reporter=text mocha --require babel-polyfill --require @babel/register --timeout 5000 dummy/tests/*.js --exit",
-    "droptablesTests": "DEV_ENV=test node --require @babel/register server/models/droptables.js"
+    "droptablesTests": "DEV_ENV=test node --require @babel/register server/models/droptables.js",
+    "compile": "./node_modules/.bin/babel ./server -d ./build"
   },
   "repository": {
     "type": "git",
