--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,30 @@
-  
 language: node_js
+
 node_js:
   - "stable"
+cache:
+  directories:
+    - "node_modules"
+addons:
+  postgresql: "9.6"
+
+services:
+  - postgresql
+
+before_install:
+  - psql -c 'create database testdatabase' -U postgres
+
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  
 script:
-  - npm test
+  - npm run test
+
 after_success:
-  - npm run coverage
+  - npm run coveralls
  
