--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "Banka is a light-weight core banking application that powers banking operations like account",
   "main": "app.js",
   "scripts": {
-    "start": "npm run compile && npm run createTables && nodemon --exec babel-node server/app.database.js",
-    "dev": "npm run droptables && npm run createTables && npm run start",
+    "start-dev": "nodemon --exec babel-node server/app.database.js",
+    "start": "node ./build/app.database.js",
     "test": "DEV_ENV=test nyc --reporter=html --reporter=text mocha --require babel-polyfill --require @babel/register --timeout 5000 server/tests/*.js --exit",
     "droptables": "DEV_ENV=development node --require @babel/register server/models/droptables.js",
-    "createTables": "DEV_ENV=development node --require @babel/register server/models/tables.js && npm run createadmin",
+    "createTables": "DEV_ENV=development node --require @babel/register server/models/tables.js",
     "startTests": "DEV_ENV=test nodemon --exec babel-node server/app.database.js",
-    "startproduction": "DEV_ENV=production babel-node server/app.database.js && npm run createTables && npm run createadmin",
     "createadminTests": "DEV_ENV=test node --require @babel/register server/controllers/admin.js",
     "createadmin": "DEV_ENV=development node --require @babel/register server/controllers/admin.js",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
@@ -18,7 +17,7 @@
     "startv1": "nodemon --exec babel-node dummy/app.js",
     "testV1": "nyc --reporter=html --reporter=text mocha --require babel-polyfill --require @babel/register --timeout 5000 dummy/tests/*.js --exit",
     "droptablesTests": "DEV_ENV=test node --require @babel/register server/models/droptables.js",
-    "compile": "./node_modules/.bin/babel ./server -d ./build"
+    "build": "rm -rf ./build && ./node_modules/.bin/babel ./server -d ./build --copy-files"
   },
   "repository": {
     "type": "git",
@@ -34,9 +33,10 @@
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.4.0",
     "@babel/node": "^7.2.2",
+    "@babel/polyfill": "^7.4.3",
     "@babel/preset-env": "^7.4.2",
     "@babel/register": "^7.4.0",
-    "babel-polyfill": "^6.26.0",
+    "@sendgrid/mail": "^6.3.1",
     "bcrypt": "^3.0.5",
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
@@ -48,7 +48,8 @@
     "moment": "^2.24.0",
     "nodemon": "^1.18.10",
     "pg": "^7.10.0",
-    "swagger-ui-express": "^4.0.2"
+    "swagger-ui-express": "^4.0.2",
+    "validatorjs": "^3.15.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
