--- a/package.json
+++ b/package.json
@@ -4,19 +4,18 @@
   "description": "Banka is a light-weight core banking application that powers banking operations like account",
   "main": "app.js",
   "scripts": {
-    "start-dev": "nodemon --exec babel-node server/app.database.js",
     "start": "node ./build/app.database.js",
-    "test": "DEV_ENV=test nyc --reporter=html --reporter=text mocha --require babel-polyfill --require @babel/register --timeout 5000 server/tests/*.js --exit",
-    "droptables": "DEV_ENV=development node --require @babel/register server/models/droptables.js",
-    "createTables": "DEV_ENV=development node --require @babel/register server/models/tables.js",
-    "startTests": "DEV_ENV=test nodemon --exec babel-node server/app.database.js",
-    "createadminTests": "DEV_ENV=test node --require @babel/register server/controllers/admin.js",
-    "createadmin": "DEV_ENV=development node --require @babel/register server/controllers/admin.js",
+    "start-dev": "npm run createTables && npm run createadmin && NODE_ENV=development nodemon --exec babel-node server/app.database.js",
+    "start-devtest": "NODE_ENV=test nodemon --exec babel-node server/app.database.js",
+    "test": "npm run droptablesTests &&  npm run createTablesTests && NODE_ENV=test nyc --reporter=html --reporter=text mocha --require @babel/polyfill --require @babel/register --timeout 5000 server/tests/index.tests.js --exit",
+    "droptables": "NODE_ENV=development node --require @babel/register server/models/droptables.js",
+    "createTables": "NODE_ENV=development node --require @babel/register server/models/tables.js",
+    "createadmin": "NODE_ENV=development node --require @babel/register server/controllers/admin.js",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
-    "createTablesTests": "DEV_ENV=test node --require @babel/register server/models/tables.js && npm run createadminTests",
+    "createTablesTests": "NODE_ENV=test node --require @babel/register server/models/tables.js",
     "startv1": "nodemon --exec babel-node dummy/app.js",
     "testV1": "nyc --reporter=html --reporter=text mocha --require babel-polyfill --require @babel/register --timeout 5000 dummy/tests/*.js --exit",
-    "droptablesTests": "DEV_ENV=test node --require @babel/register server/models/droptables.js",
+    "droptablesTests": "NODE_ENV=test node --require @babel/register server/models/droptables.js",
     "build": "rm -rf ./build && ./node_modules/.bin/babel ./server -d ./build --copy-files"
   },
   "repository": {
