--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
   
 script:
+  - npm install 
   - npm run test
 
 after_success:
