--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "main": "app.js",
   "scripts": {
     "start": "node ./build/app.database.js",
-    "start-dev": "npm run createTables && npm run createadmin && NODE_ENV=development nodemon --exec babel-node server/app.database.js",
-    "start-devtest": "NODE_ENV=test nodemon --exec babel-node server/app.database.js",
+    "start-dev": "NODE_ENV=development nodemon --exec babel-node server/app.database.js",
     "test": "npm run droptablesTests &&  npm run createTablesTests && NODE_ENV=test nyc --reporter=html --reporter=text mocha --require @babel/polyfill --require @babel/register --timeout 5000 server/tests/index.tests.js --exit",
     "droptables": "NODE_ENV=development node --require @babel/register server/models/droptables.js",
-    "createTables": "NODE_ENV=development node --require @babel/register server/models/tables.js",
+    "createTables": "NODE_ENV=development node --require @babel/register server/models/tables.js && npm run createadmin",
     "createadmin": "NODE_ENV=development node --require @babel/register server/controllers/admin.js",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "createTablesTests": "NODE_ENV=test node --require @babel/register server/models/tables.js",
