--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "test": "npm run droptablesTests &&  npm run createTablesTests && NODE_ENV=test nyc --reporter=html --reporter=text mocha --require @babel/polyfill --require @babel/register --timeout 5000 server/tests/index.tests.js --exit",
     "droptables": "NODE_ENV=development node --require @babel/register server/models/droptables.js",
     "createTables": "NODE_ENV=development node --require @babel/register server/models/tables.js && npm run createadmin",
-    "createTablesproduction": "node --require @babel/register server/models/tables.js && npm run createadminproduction",
+    "createTablesproduction": "NODE_ENV=production node --require @babel/register server/models/tables.js && npm run createadminproduction",
     "createadmin": "NODE_ENV=development node --require @babel/register server/controllers/admin.js",
-    "createadminproduction": "node --require @babel/register server/controllers/admin.js",
+    "createadminproduction": "NODE_ENV=production node --require @babel/register server/controllers/admin.js",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "createTablesTests": "NODE_ENV=test node --require @babel/register server/models/tables.js",
     "startv1": "nodemon --exec babel-node dummy/app.js",
