[bug #165645049] start script

--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "Banka is a light-weight core banking application that powers banking operations like account",
   "main": "app.js",
   "scripts": {
-    "start": "npm run createTablesproduction && node --require  @babel/register ./build/app.database.js",
+    "start": "node --require  @babel/register server/app.database.js && npm run create",
     "start-dev": "NODE_ENV=development nodemon --exec babel-node server/app.database.js",
     "test": "npm run droptablesTests &&  npm run createTablesTests && NODE_ENV=test nyc --reporter=html --reporter=text mocha --require @babel/polyfill --require @babel/register --timeout 5000 server/tests/index.tests.js --exit",
     "droptables": "NODE_ENV=development node --require @babel/register server/models/droptables.js",
     "createTables": "NODE_ENV=development node --require @babel/register server/models/tables.js && npm run createadmin",
-    "createTablesproduction": "NODE_ENV=production node --require @babel/register server/models/tables.js && npm run createadminproduction",
+    "create": "node --require @babel/register server/models/tables.js && npm run admin",
     "createadmin": "NODE_ENV=development node --require @babel/register server/controllers/admin.js",
-    "createadminproduction": "NODE_ENV=production node --require @babel/register server/controllers/admin.js",
+    "admin": "node --require @babel/register server/controllers/admin.js",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "createTablesTests": "NODE_ENV=test node --require @babel/register server/models/tables.js",
     "startv1": "nodemon --exec babel-node dummy/app.js",
