--- a/package.json
+++ b/package.json
@@ -4,19 +4,18 @@
   "description": "Banka is a light-weight core banking application that powers banking operations like account",
   "main": "app.js",
   "scripts": {
-    "start": "npm run create && node --require  @babel/register server/app.database.js",
+    "start": "node ./build/app.database.js",
     "start-dev": "NODE_ENV=development nodemon --exec babel-node server/app.database.js",
     "test": "npm run droptablesTests &&  npm run createTablesTests && NODE_ENV=test nyc --reporter=html --reporter=text mocha --require @babel/polyfill --require @babel/register --timeout 5000 server/tests/index.tests.js --exit",
     "droptables": "NODE_ENV=development node --require @babel/register server/models/droptables.js",
     "createTables": "NODE_ENV=development node --require @babel/register server/models/tables.js && npm run createadmin",
-    "create": "NODE_ENV=production node --require @babel/register server/models/tables.js && npm run admin",
     "createadmin": "NODE_ENV=development node --require @babel/register server/controllers/admin.js",
-    "admin": "NODE_ENV=production node --require @babel/register server/controllers/admin.js",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "createTablesTests": "NODE_ENV=test node --require @babel/register server/models/tables.js",
     "startv1": "nodemon --exec babel-node dummy/app.js",
     "testV1": "nyc --reporter=html --reporter=text mocha --require babel-polyfill --require @babel/register --timeout 5000 dummy/tests/*.js --exit",
-    "droptablesTests": "NODE_ENV=test node --require @babel/register server/models/droptables.js"
+    "droptablesTests": "NODE_ENV=test node --require @babel/register server/models/droptables.js",
+    "build": "rm -rf ./build && ./node_modules/.bin/babel ./server -d ./build --copy-files"
   },
   "repository": {
     "type": "git",
