--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "moment": "^2.24.0",
     "nodemon": "^1.18.10",
     "pg": "^7.10.0",
+    "swagger-node-express": "^2.1.3",
     "swagger-ui-express": "^4.0.2",
     "validatorjs": "^3.15.1"
   },
